<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.activities.CreateListingActivity"
    tools:showIn="@layout/activity_create_listing">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnEndTime"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="?attr/colorButtonNormal"
            android:text="Time"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/btnEndDate"
            app:layout_constraintTop_toBottomOf="@+id/btnStartTime" />

        <Button
            android:id="@+id/btnEndDate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:background="?attr/colorButtonNormal"
            android:text="Date"
            app:layout_constraintStart_toEndOf="@+id/txtEndDate"
            app:layout_constraintTop_toBottomOf="@+id/btnStartDate" />

        <EditText
            android:id="@+id/txtListingTitle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/txt_field_black_border"
            android:ems="10"
            android:hint="Bicycle"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/txtInitialPrice"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/txt_field_black_border"
            android:ems="10"
            android:hint="30.00"
            android:inputType="number|numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtListingTitle" />

        <EditText
            android:id="@+id/txtMinBid"
            android:layout_width="213dp"
            android:layout_height="40dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/txt_field_black_border"
            android:ems="10"
            android:hint="1.00"
            android:inputType="number|numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInitialPrice" />

        <EditText
            android:id="@+id/txtCategory"
            android:layout_width="213dp"
            android:layout_height="40dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/txt_field_black_border"
            android:ems="10"
            android:hint="Bikes"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMinBid" />

        <EditText
            android:id="@+id/txtAreaDescription"
            android:layout_width="373dp"
            android:layout_height="144dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/txt_field_black_border"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEndDate" />

        <TextView
            android:id="@+id/labelAuctionDur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            android:text="Auction Duration: *"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelMinBid" />

        <TextView
            android:id="@+id/labelDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:text="Description: *"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelEndDate" />

        <TextView
            android:id="@+id/labelEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="End:"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelStartDate" />

        <TextView
            android:id="@+id/labelStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="Start:"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelAuctionDur" />

        <TextView
            android:id="@+id/labelMinBid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="Minimum Bid: *"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelInitialPrice" />

        <TextView
            android:id="@+id/labelCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="316dp"
            android:text="Category: *"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelInitialPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="Initial Price: *"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelListingTitle" />

        <TextView
            android:id="@+id/labelListingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="Listing Title: *"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btnCreateListing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="464dp"
            android:layout_marginTop="8dp"
            android:background="#1A5276"
            android:text="Create"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAreaDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="398dp"
            android:layout_height="33dp"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="60dp"
            android:text="Enter new listing information below:"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelRequiredFields"
            android:layout_width="209dp"
            android:layout_height="25dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="375dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="* indicates a required field"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAreaDescription" />

        <Button
            android:id="@+id/btnStartTime"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="112dp"
            android:background="?attr/colorButtonNormal"
            android:text="Time"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/btnStartDate"
            app:layout_constraintTop_toBottomOf="@+id/txtMinBid" />

        <Button
            android:id="@+id/btnStartDate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="112dp"
            android:background="?attr/colorButtonNormal"
            android:text="Date"
            app:layout_constraintStart_toEndOf="@+id/txtStartDate"
            app:layout_constraintTop_toBottomOf="@+id/txtMinBid" />

        <TextView
            android:id="@+id/txtEndDate"
            android:layout_width="213dp"
            android:layout_height="40dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/txt_field_black_border"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStartDate" />

        <TextView
            android:id="@+id/txtStartDate"
            android:layout_width="213dp"
            android:layout_height="40dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="112dp"
            android:background="@drawable/txt_field_black_border"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMinBid" />

        <Button
            android:id="@+id/btnAddImage"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="250dp"
            android:text="Add Image"
            app:layout_constraintStart_toEndOf="@+id/txtMinBid"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="123dp"
            android:layout_height="103dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toEndOf="@+id/txtInitialPrice"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/txt_field_black_border" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>